<resources>
    <string name="app_name">AComer</string>

    <!-- LoginLayout -->
    <string name="logIniciarSesion">Iniciar Sesión</string>
    <string name="logRegistro">Registro</string>
    <string name="logNombreUsuario">Nombre username</string>
    <string name="logPassword">Contraseña</string>
    <string name="logErrorLogin">Usuario y/o contraseña incorrectos</string>

    <!-- MainLayout Menu -->
    <string name="mainMenuBuscar">Search</string>
    <string name="mainMenuFavoritos">Favs</string>
    <string name="mainMenuMiCuenta">Profile</string>
    <string name="mainMenuAyuda">Help</string>

    <!-- RegisterLayout -->
    <string name="regTitulo">Registro</string>
    <string name="regEmail">Email</string>
    <string name="regPassword">Contraseña</string>
    <string name="regPassword2">Repetir contraseña</string>
    <string name="regNombre">Nombre</string>
    <string name="regApellido">Apellido</string>
    <string name="regFechaNacimiento">Fecha nacimiento</string>
    <string name="regTelefono">Teléfono</string>
    <string name="regCiudad">Ciudad</string>
    <string name="regProvincia">Provincia</string>
    <string name="regPais">Pais</string>
    <string name="regCodigoPostal">Codigo Postal</string>
    <string name="regRegistro">Registrarse</string>

    <!-- RestaurantLayout -->
    <string name="resContacto">Contacto</string>
    <string name="resCocina">Cocina</string>
    <string name="resButtonOpiniones">Opiniones</string>
    <string name="resButtonProductos">Oferta</string>

    <!-- My Account Fragment -->
    <string name="miNombre">Nombre</string>
    <string name="miApellido">Apellido</string>
    <string name="miTelefono">Telefono</string>
    <string name="miEmail">Email</string>
    <string name="miButtonEditarDatos">Editar perfil</string>
    <string name="miButtonCerrarSesion">Cerrar sesión</string>

    <!-- Favourite addition or deletion -->
    <string name="deleteDialogTitle">Eliminar favorito</string>
    <string name="addDialogTitle">Añadir favorito</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <!-- Opinion Activity -->
    <string name="opEnviarOpinion">Enviar opinión</string>
    <string name="opOpiniones">Opiniones</string>

    <!-- -URL Server -->
    <string name="urlServer">http://192.168.0.14/proyecto/aComerAndroid/</string>

</resources>
