<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/accion_buscar"
        android:enabled="true"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/mainMenuBuscar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accion_favoritos"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/mainMenuFavoritos"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accion_mi_cuenta"
        android:enabled="true"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/mainMenuMiCuenta"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accion_ayuda"
        android:enabled="true"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/mainMenuAyuda"
        app:showAsAction="ifRoom" />
</menu>