<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.informatica.ing_software.acomer.activities.RegisterActivity">

    <TextView
        android:id="@+id/aRegisterTextViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/regTitulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/aRegisterButtonRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="registrarse"
        android:text="@string/regRegistro" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/aRegisterButtonRegistro"
        android:layout_below="@id/aRegisterTextViewTitulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/aRegisterTextViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regEmail" />

            <EditText
                android:id="@+id/aRegisterEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/aRegisterTextViewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regPassword" />

            <EditText
                android:id="@+id/aRegisterEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/aRegisterTextViewPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regPassword2" />

            <EditText
                android:id="@+id/aRegisterEditTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/aRegisterTextViewNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regNombre" />

            <EditText
                android:id="@+id/aRegisterEditTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/aRegisterTextViewApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regApellido" />

            <EditText
                android:id="@+id/aRegisterEditTextApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/aRegisterTextViewFechaNacimimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regFechaNacimiento" />

            <EditText
                android:id="@+id/aRegisterEditTextFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/aRegisterTextViewTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regTelefono" />

            <EditText
                android:id="@+id/aRegisterEditTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/aRegisterTextViewCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regCiudad" />

            <EditText
                android:id="@+id/aRegisterEditTextCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/aRegisterTextViewProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regProvincia" />

            <EditText
                android:id="@+id/aRegisterEditTextProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/aRegisterTextViewPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regPais" />

            <EditText
                android:id="@+id/aRegisterEditTextPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/aRegisterTextViewCodigoPostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regCodigoPostal" />

            <EditText
                android:id="@+id/aRegisterEditTextCodigoPostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>